<resources>
    <string name="app_name">FindArt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app_title_find">Find</string>
    <string name="app_title_art">Art</string>
    <string name="dot">·</string>

    <string name="back">Назад</string>

    <string name="choose_image">Выбрать фото</string>
    <string name="bookmarks">Закладки</string>

    <string name="uploaded_image">Загруженное изображение</string>
    <string name="choose_another">Выбрать другое</string>
    <string name="edit">Редактировать</string>
    <string name="find">Найти!</string>

    <string name="best_results">Лучшее совпадение</string>
    <string name="no_results">Совпадения не найдены</string>

</resources>