<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_normal"
    >

    <androidx.percentlayout.widget.PercentFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/main_image"
            app:layout_heightPercent="70%"
            />

        <androidx.percentlayout.widget.PercentRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            app:layout_marginTopPercent="71%">

            <TextView
                android:id="@+id/app_title_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_light"
                android:text="@string/app_title_find"
                android:textColor="@color/dark_gray"
                android:textSize="65sp" />

            <TextView
                android:id="@+id/app_title_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/app_title_find"
                android:fontFamily="@font/avenir_light"
                android:text="@string/dot"
                android:textColor="@color/dark_gray"
                android:textSize="70sp" />

            <TextView
                android:id="@+id/app_title_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/app_title_dot"
                android:fontFamily="@font/avenir_light"
                android:text="@string/app_title_art"
                android:textColor="@color/dark_gray"
                android:textSize="65sp" />
        </androidx.percentlayout.widget.PercentRelativeLayout>

    </androidx.percentlayout.widget.PercentFrameLayout>


    <androidx.percentlayout.widget.PercentFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/app_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gill_sans"
            android:text="@string/choose_image"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_marginBottomPercent="5%"
            />
    </androidx.percentlayout.widget.PercentFrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_screen_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/bookmarks"
        app:srcCompat="@drawable/ic_bookmark_outline_black_24dp"
        app:backgroundTint="@color/transparent_white"
         />




</androidx.constraintlayout.widget.ConstraintLayout>